# GameBoyEmulator

./: .gitignore  CMakeLists.txt  README.md  build.zig  build.zig.zon
XXX/: CMakeLists.txt
XXX/back/NguGB/: .gitignore
XXX/back/NguGB/back2/back/: OperandRegister.cpp
XXX/back/NguGB/src/: CPU.h  Common.h
XXX/back/back/: README.md
XXX/back/back/NguGB/back2/src/: CPU.cpp
XXX/back/back/NguGB/back3/: LCD.c
XXX/back/back/sample/: runtime.c
XXX/back/back/src/cpu/: micro.c
XXX/back/src/: CPU.h
XXX/clear/: MemoryBank.h  main.c
XXX/sample/: chec_ide.c
XXX/src/: cart.c  cpu.h  main.c  memory.h
XXX/src_new/: CPU.h  Schedule.h
back/: main.c
back/NguGB/back2/src/: CPU.hpp  main.cpp
back/NguGB/back3/: Debug.c  Debug.h
back/NguGB/src/: CPU.c  Cart.h
back/XXX/back/: cart.c
back/XXX/back/NguGB/back2/back/: CPU.cpp  CPU.hpp  Memory.cpp  OperandRegister.hpp  main.cpp
back/XXX/back/NguGB/back2/src/: Debug.cpp  Debug.hpp  Operand.hpp
back/XXX/back/NguGB/back3/: CPU.h  Common.h  DebugTile.c  GBTexture.c  GBTexture.h  Registers.c  Tile.c  Tile.h  main.c
back/XXX/back/NguGB/src/: Instruction.c  main.c
back/XXX/back/back/: CMakeLists.txt
back/XXX/back/back/NguGB/: CMakeLists.txt
back/XXX/back/back/NguGB/back2/back/: Memory.hpp  Operand.cpp  Operand.hpp  OperandMemory.hpp  main_old.cpp
back/XXX/back/back/NguGB/back2/src/: CPUTest.cpp  LCD.hpp  Opcode.cpp  Opcode.hpp
back/XXX/back/back/NguGB/back3/: CPU.c  DebugTile.h  Graphic.c  Graphic.h  Memory.h
back/XXX/back/back/NguGB/src/: Bus.c  Bus.h  Cart.c  Opcode.h
back/XXX/back/back/src/: cart.h  gb.h  gpu.c  mmu.c  mmu.h
back/XXX/back/back/src/cpu/: cpu.c
back/XXX/back/cpu/: cpu.h  micro.h
back/XXX/back/src/: CPU.c  GB.h  Memory.c  Memory.h  main.c
back/XXX/clear/: Cart.c  Cart.h  MemoryBank.c
back/XXX/sample/: runtime.c
back/XXX/src/: cart.h  cpu.c  input.c  input.h  memory.c  rtc.h
back/XXX/src_new/: CPU.c  MMU.h  Sleep.c  Sleep.h
back/back/NguGB/back2/back/: OperandMemory.cpp
back/back/NguGB/back2/src/: LCD.cpp
back/back/NguGB/back3/: LCD.h  Memory.c  Registers.h
back/back/NguGB/src/: Instruction.h
back/src/: GB.c  main.cpp
sample/: flag.c
src/: CPU.c  CPU.h  Cloeck.h  MMU.c  MMU.h  alu.zig  cart.c  cpu.c  cpu.h  flags_helper.zig  main.c  main.zig  memory.zig  opcode_helper.zig  register.zig  rtc.c  rtc.h
